# axum-tower-sessions-edge

./: .dev.vars  .gitignore  Cargo.toml  README.md  compose.yml  package.json  secrets.json  temp_app  temp_sa  wrangler.jsonc
.github/workflows/: test.yaml
src/: config.rs  docs.rs  error.rs  lib.rs  router.rs  session.rs  utilities.rs  zitadel_http.rs
src/api/: authenticated.rs  mod.rs  public.rs  router.rs
src/api/tests/: middleware.rs  mod.rs  routes.rs
src/axum_introspector/: mod.rs
src/axum_introspector/introspection/: mod.rs  state.rs  state_builder.rs  user.rs
src/credentials/: application.rs  mod.rs  service_account.rs
src/oidc/: discovery.rs  mod.rs
src/oidc/introspection/: mod.rs
src/oidc/introspection/cache/: cloudflare.rs  in_memory.rs  mod.rs
src/session_storage/: cloudflare.rs  in_memory.rs  mod.rs
